src/components/button-group/ButtonGroup.style.scss
@use "../../styles/helpers";
@use "../../styles/variables";
@use "../../styles/box";

.button-group {
  border: none;
  width: fit-content;
  background: transparent;
  position: relative;
  display: flex;
  padding: variables.$xxs / 2;
  gap: variables.$xs;

  & {
    @include box.box(variables.$secondary);
    @include helpers.borderRadius();
    border-width: 0;
  }

  .button {
    display: inline-flex;
    height: 100%;
    border-radius: variables.$borderRadius - (variables.$xxs / 2);
  }

  &__first, &__item {
    position: relative;
    &:after {
      content: '';
      position: absolute;
      top: 25%;
      bottom: 0;
      right: -1 * (variables.$xxs);
      height: 50%;
      width: 1px;
      background: helpers.borderColor();
    }
  }


}

